compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bit_arrays__not_byte_aligned.snap
---
source: compiler-core/src/go/tests/bit_arrays.rs
assertion_line: 748
expression: "\nfn thing() {\n  4\n}\n\nfn go() {\n  <<256:4>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn thing() {
  4
}

fn go() {
  <<256:4>>
}


----- ERROR
error: Unsupported feature for compilation target
  ┌─ /src/go/error.gleam:7:5
  │
7 │   <<256:4>>
  │     ^^^^^

Non byte aligned array is not supported for Go compilation.
